--- a/views/admin/editBook.ejs
+++ b/views/admin/editBook.ejs
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!-- <!DOCTYPE html>
 <html lang="en">
 <%- include('../includes/head.ejs'); %>
 <body>
@@ -39,4 +39,4 @@
     </form>
 </main>
 </body>
-</html>
+</html> -->
