--- a/views/includes/nav.ejs
+++ b/views/includes/nav.ejs
@@ -5,6 +5,7 @@ const navmenu = [
     {'name': 'Cart', 'link': '/cart',level:1},
     {'name': 'Orders', 'link': '/orders',level:1},
     {'name': 'Add Product', 'link': '/admin/add-book',level:1},
+    {'name': 'Add Pet', 'link': '/admin/add-pet',level:1},
 //    {'name': 'Admin Products', 'link': '/admin/products',level:1}
 ];
 
