--- a/views/admin/edit-pet.ejs
+++ b/views/admin/edit-pet.ejs
@@ -6,9 +6,9 @@
         <%- include('../includes/nav.ejs') %>
 
             <main>
-                <% if (prods.length > 0) { %>
+                <% if (pet.length > 0) { %>
                     <div class="grid">
-                        <% for (let pet of prods) { %>
+                        <% for (let pet of pet) { %>
                             <article class="card pet-item">
                                 <header class="card__header">
                                     <h1 class="pet__name">
@@ -48,5 +48,5 @@
                     </div>
                     <% } else { %>
                         <h1>No pets Found!</h1>
-                        <% } %>
+                    <% } %>
             </main>
