fixed pet addition

--- a/views/admin/edit-pet.ejs
+++ b/views/admin/edit-pet.ejs
@@ -6,9 +6,9 @@
         <%- include('../includes/nav.ejs') %>
 
             <main>
-                <% if (pet.length > 0) { %>
+                <% if (pets.length > 0) { %>
                     <div class="grid">
-                        <% for (let pet of pet) { %>
+                        <% for (let pet of pets) { %>
                             <article class="card pet-item">
                                 <header class="card__header">
                                     <h1 class="pet__name">
