--- a/views/admin/edit-pet.ejs
+++ b/views/admin/edit-pet.ejs
@@ -1,8 +1,5 @@
 <%- include('../includes/head.ejs') %>
 
-    </head>
-
-    <body>
         <%- include('../includes/nav.ejs') %>
 
             <main>
@@ -50,3 +47,5 @@
                         <h1>No pets Found!</h1>
                     <% } %>
             </main>
+
+            <%- include('../includes/footer.ejs') %>
