--- a/public/css/pets.css
+++ b/public/css/pets.css
@@ -1,47 +1,109 @@
-article.product{
-border: 1px solid #0002;
-}
-
-.book_info{
-    padding: 4px;
-}
-
-.book_title{
-    font-size: 20px;
-}
-
-.book_subtitle{
-    font-size: 15px;
-}
-
-.book_author{
-    font-size: 13px;
-    padding-left: 1em;
-}
-.book_price{
-    font-size: 20px;
-    padding-left: 1em;
-}
-
-.twocol{
+.card {
+    box-shadow: 0 0 5px 3px lightgray;
+    margin: 1rem;
     display: grid;
-    grid-template-columns: 1fr 1fr;
-    gap: 8px;
 }
 
-.note{
-    border: 1px solid #0004;
+.card__content {
+    grid-column: 2;
+}
+
+.card__actions {
+    grid-column: 2;
+    margin-top: -56px;
+    display: block;
+}
+
+.btn {
+    float: left;
+    display: block;
+    text-decoration: none;
+    padding: 5px;
+    font-size: 20px;
+    color: #2c0d05;
+    background-color: #fcdec8;
+    border: 1px solid #682514;
+    margin: 5px auto;
     text-align: center;
-    text-decoration: underline goldenrod;
-    font-weight: bold;
-    padding: 10px;
-    background-color: #5002;
+    border-radius: 5px;
+    margin: 5px 5px;
+    padding: 0 25px 0 25px;
 }
 
+a.btn {
+    padding: 0 45px;
+}
 
+.formTitle {
+    grid-column: 1/3;
+}
 
-@media screen and (max-width: 400px) {
-    .twocol{ 
-        grid-template-columns: 1fr;
-    }
+img#imageDisplay {
+    width: 50%;
+}
+
+select {
+    height: 30px;
+    width: 252px;
+}
+
+.pet-form {
+    display: grid;
+    grid-template-columns: auto auto;
+}
+
+.form-control.name {
+    grid-column: 1;
+}
+
+.form-control.imageUrl {
+    grid-column: 1;
+}
+
+.form-control.breed {
+    grid-column: 1;
+}
+
+.form-control.size {
+    grid-column: 1;
+}
+
+.form-control.temperament {
+    grid-column: 1;
+}
+
+.form-control.gender {
+    grid-column: 1;
+}
+
+.form-control.age {
+    grid-column: 1;
+}
+
+.form-control.specialNeeds {
+    grid-column: 1;
+}
+
+.form-control.description {
+    grid-column: 2;
+    grid-row:6/9;
+    width: 252px;
+}
+
+.imageDisplay {
+    grid-column: 2;
+    grid-row: 2/6;
+    width: 140%;
+    margin-left: 20%;
+}
+
+#specialNeeds {
+    width: 252px;
+}
+
+#addPet {
+    width: 66%;
+    height: 30%;
+    margin-left: 15%;
+    margin-top: 18%;
 }
