moved search selects to includes

--- a/views/includes/pet_card.ejs
+++ b/views/includes/pet_card.ejs
@@ -12,7 +12,7 @@
         <span><%= pet.gender %></span>
         <span class="label">Size</span>
         <span><%= pet.size %></span>
-        <span class="label">Activity Level</span>
+        <span class="label">Temperament</span>
         <span><%= pet.activityLevel %></span>
       </section>
       <div class="actions">
