--- a/views/search/pets/index.ejs
+++ b/views/search/pets/index.ejs
@@ -9,50 +9,20 @@
     <section class="search">
       <form action="/search/pets" method="POST">
         <div class="filter">
-          <label for="breed">Breed</label>
-          <select id="breed" name="breed">
-            <option></option>
-            <% dogBreeds.map(breed => { %>
-              <option <% if (searchParams.breed === breed) { %> selected <% }%>> <%= breed %></option>
-            <% }) %>
-          </select>
+          <%- include('../../includes/controls/breed_select.ejs'); %>
         </div>
         <div class="filter">
           <label for="size">Size</label>
-          <select id="size" name="size">
-            <option></option>
-            <option <% if(searchParams.size == "Large") {%> selected <%}%>>Large</option>
-            <option <% if(searchParams.size == "Medium") {%> selected <%}%>>Medium</option>
-            <option <% if(searchParams.size == "Small") {%> selected <%}%>>Small</option>
-          </select>
+          <%- include('../../includes/controls/size_select.ejs'); %>
         </div>
         <div class="filter">
-          <label for="activityLevel">Temperament</label>
-          <select id="activityLevel" name="activityLevel">
-            <option></option>
-
-            <% dogTemperaments.map(temperament => { %>
-              <option <% if (searchParams.activityLevel === temperament) { %> selected <% }%>> <%= temperament %></option>
-            <% }) %>
-          </select>
+          <%- include('../../includes/controls/activityLevel_select.ejs'); %>
         </div>
         <div class="filter">         
-          <label for="gender">Gender</label>
-          <select id="gender" name="gender">
-            <option></option>
-            <option <% if(searchParams.gender == "Male") {%> selected <%}%>>Male</option>
-            <option <% if(searchParams.gender == "Female") {%> selected <%}%>>Female</option>
-          </select>
+          <%- include('../../includes/controls/gender_select.ejs'); %>
         </div>
         <div class="filter">
-          <label for="age">Age</label>
-          <select id="age" name="age">
-            <option></option>
-            <option <% if(searchParams.age == "Puppy") {%> selected <%}%>>Puppy</option>
-            <option <% if(searchParams.age == "Adolescent") {%> selected <%}%>>Adolescent</option>
-            <option <% if(searchParams.age == "Adult") {%> selected <%}%>>Adult</option>
-            <option <% if(searchParams.age == "Senior") {%> selected <%}%>>Senior</option>
-          </select>
+          <%- include('../../includes/controls/age_select.ejs'); %>
         </div>
         <div class="filter">          
           <button class="button" type="submit">Search</button>
