--- a/views/search/humans.ejs
+++ b/views/search/humans.ejs
@@ -101,6 +101,8 @@
       </article>
       <% }); %>
     </div>
+    <!-- for pagination -->
+    <%- include('../includes/pagination.ejs'); %>
   </main>
 </body>
 
