--- a/views/search/pets/index.ejs
+++ b/views/search/pets/index.ejs
@@ -67,6 +67,8 @@
         <%- include(__dirname+'/views/includes/pet_card.ejs', {pet: pet})%>
       <% }); %>
     </div>
+    <!-- for pagination -->
+    <%- include('../../includes/pagination.ejs'); %>
   </main>
 </body>
 
